relativo y  media squiere

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
         <h1>posiciones</h1>
         <hr>
+        <a href="relativo.html">relativo</a>
     </header>
     <main>
         <div>
@@ -29,6 +30,17 @@
                 <p>CAJA 4</p>
             </div>
         </div>
+        <div>
+        <div class="caja5">
+            <p>POSICIÓN ESTATICA</p>
+        </div>
+        </div>
+        <div class="goku"> <!---padre--->
+            <p> goku </p>
+            <div class="gohan"> <!---hijo--->
+                <p>gohan</p>
+            </div>
+            </div>
 
         
     </main>
